# sqlforge

./: .gitignore  Dockerfile  Makefile  README.md  README_CN.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/sqlforge/: engine.py  main.py  schemas.py
backend/src/sqlforge/routes/: diff.py  format.py  lineage.py  optimize.py  parse.py  transpile.py
backend/tests/: test_engine.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  editor.ts  main.ts  style.css
