[project]
name = "sqlforge"
version = "0.1.0"
description = "SQL formatting and dialect transpilation API powered by sqlglot"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "sqlglot>=30.0.1",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
sqlforge = "sqlforge.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlforge"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

